Query is now given a resolution date for both staff and students

--- a/Views/Query/StudentQuery/QueryOverview/ViewResolvedTicket.cshtml
+++ b/Views/Query/StudentQuery/QueryOverview/ViewResolvedTicket.cshtml
@@ -31,14 +31,14 @@
 
         <!-- Query Details -->
         <div class="card">
-            <h3><i class="fas fa-info-circle"></i> Query Information</h3>
+            <h3><i class="fas fa-info-circle"></i> My Query Information</h3>
             <div class="info-grid">
                 <div class="info-item pulse">
                     <strong><i class="fas fa-hashtag"></i> Query ID</strong>
                     <span>@Model.QueryID</span>
                 </div>
                 <div class="info-item">
-                    <strong><i class="fas fa-align-left"></i> Description</strong>
+                    <strong><i class="fas fa-align-left"></i> Query</strong>
                     <span>@Model.Description</span>
                 </div>
                 <div class="info-item">
@@ -70,7 +70,7 @@
                         <i class="fas fa-check-circle"></i>
                     </div>
                     <div class="timeline-content">
-                        <div class="timeline-date">Now</div>
+                        <div class="timeline-date">Now   </div>
                         <div>Query Resolved</div>
                     </div>
                 </div>
