--- a/Views/Query/StaffQuery/QueryDetails.cshtml
+++ b/Views/Query/StaffQuery/QueryDetails.cshtml
@@ -32,7 +32,7 @@
             <div class="card-content">
                 <div class="info-item">
                     <label>Query ID</label>
-                    <span>@Model.QueryID</span>
+                    <span>@Model.TicketNumber</span>
                 </div>
                 <div class="info-item">
                     <label>Description</label>
