--- a/Views/Query/StudentQuery/QueryOverview/ViewResolvedTicket.cshtml
+++ b/Views/Query/StudentQuery/QueryOverview/ViewResolvedTicket.cshtml
@@ -38,7 +38,7 @@
             <div class="info-grid">
                 <div class="info-item pulse">
                     <strong><i class="fas fa-hashtag"></i> Query ID</strong>
-                    <span>@Model.QueryID</span>
+                    <span>@Model.TicketNumber</span>
                 </div>
                 <div class="info-item">
                     <strong><i class="fas fa-align-left"></i> Query</strong>
