--- a/Views/Query/StudentQuery/QueryOverview/ViewTicket.cshtml
+++ b/Views/Query/StudentQuery/QueryOverview/ViewTicket.cshtml
@@ -20,7 +20,7 @@
                 <div class="ticket-meta">
                     <div class="ticket-id pulse-animation">
                         <i class="fas fa-ticket-alt"></i>
-                        <strong>Ticket# @Model.QueryID</strong>
+                        <strong>Ticket# @Model.TicketNumber</strong>
                     </div>
                     <div class="ticket-status">
                         <span class="status-badge @Model.Status.ToString().ToLower()">
