--- a/Views/Query/StudentQuery/QueryOverview/OnGoingTickets.cshtml
+++ b/Views/Query/StudentQuery/QueryOverview/OnGoingTickets.cshtml
@@ -10,7 +10,7 @@
             <div class="ticket-card">
                 <div class="ticket-header">
                     <div class="ticket-id">
-                        <strong>Ticket# @query.QueryID</strong>
+                        <strong>Ticket# @query.TicketNumber</strong>
                     </div>
                     <div class="ticket-status">
                         <span class="status-badge @query.Status.ToString().ToLower()">@query.Status</span>
