--- a/Views/Query/StudentQuery/QueryOverview/ViewResolvedQueries.cshtml
+++ b/Views/Query/StudentQuery/QueryOverview/ViewResolvedQueries.cshtml
@@ -10,7 +10,7 @@
             <div class="ticket-card">
                 <div class="ticket-header">
                     <div class="ticket-id">
-                        <strong>Ticket# @query.QueryID</strong>
+                        <strong>Ticket# @query.Query.TicketNumber</strong>
                     </div>
                 
                 </div>
